updated db model

--- a/docs/v0.3-gafalag-db.md
+++ b/docs/v0.3-gafalag-db.md
@@ -2,7 +2,7 @@
 
 Ниже приведено описание модели базы данных описывающую построение словарных статей.
 
-![](./v0.2-gafalag-db-highlighted-mini.png)
+![](./v0.3-gafalag-db-highlighted-mini.png)
 
 
 Пример словарной статьи: 
@@ -34,7 +34,6 @@
 |  spelling  |  varchar(255)  |  NOT NULL, UNIQUE  |    |    |    |
 |  misspelling  |  boolean  |    |  false  |    |  Is expression misspelled  |
 |  gender_id  |  int  |    |    |  gender.id  |    |
-|  part_of_speech_id  |  int  |    |    |  part_of_speech.id  |    |
 |  language_id  |  int  |  NOT NULL,   |    |  language.id  |    |
 |  dialect_id  |  int  |    |    |  dialect.id  |    |
 |  created_at  |  timestamp  |    |    |    |    |
@@ -155,6 +154,7 @@
 |----------|----------|----------|----------|----------|----------|
 |  id  |  uuid  |  PK,   |    |  definition_category.definition_id  |    |
 |  expression_id  |  uuid  |  NOT NULL,   |    |  expression.id  |    |
+|  part_of_speech_id  |  int  |    |    |  part_of_speech.id  |    |
 |  language_id  |  int  |  NOT NULL,   |    |  language.id  |    |
 |  source_id  |  uuid  |  NOT NULL,   |    |  source.id  |    |
 |  definition_text  |  varchar(255)  |  NOT NULL, UNIQUE  |    |    |    |
@@ -169,7 +169,7 @@
 |----------|----------|----------|----------|----------|----------|
 |  id  |  uuid  |  PK,   |    |  definition.source_id  |    |
 |  name  |  varchar(255)  |  NOT NULL, UNIQUE  |    |    |    |
-|  url  |  varchar(255)  |  NOT NULL,   |    |    |    |
+|  url  |  varchar(255)  |    |    |    |    |
 |  created_at  |  timestamp  |    |    |    |    |
 |  updated_at  |  timestamp  |    |    |    |    |
 
